fix input width overflow in contact form

--- a/misc/internship/css/contact.css
+++ b/misc/internship/css/contact.css
@@ -204,6 +204,10 @@
                     display: flex;
                     flex-direction: column;
                 }
+
+                input, textarea {
+                    width: auto;
+                }
             }
 
         }
